<resources>
    <string name="app_name">palette</string>
    <string name="string_alert_no_email_format">이메일 형식이 아닙니다</string>
    <string name="string_password">비밀번호</string>
    <string name="string_find_password">비밀번호 찾기</string>
    <string name="string_login">로그인</string>
    <string name="string_email">이메일</string>
    <string name="string_alert_no_matching_account">가입되지 않은 계정이거나 정보가 잘못되었습니다.</string>
    <string name="string_signup">회원가입</string>
    <string name="string_privacy_info">개인정보 처리방침</string>
    <string name="string_ok">확인</string>
    <string name="string_alert_exist_account">이미 가입된 계정입니다</string>
    <string name="string_name">이름</string>
    <string name="string_alert_do_not_match">일치하지 않습니다</string>
    <string name="string_re_password">비밀번호 재입력</string>
    <string name="string_alert_over_number">8자 이상 입력해주세요</string>
    <string name="string_age">나이</string>
    <string name="string_setting">설정</string>
    <string name="string_developer">개발팀</string>
    <string name="string_group_name">익명의 하마</string>
    <string name="string_privacy_content">서비스 제공 기업 익명의 하마에서 제공하는 서비스 Palette는 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.&#10;&#10;익명의 하마 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.&#10;&#10;본 방침은부터 2020년 11월 25일부터 시행됩니다.&#10;&#10;1. 개인정보의 처리 목적 익명의 하마는 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.&#10;&#10;가. 홈페이지 회원가입 및 관리&#10;&#10;회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별, 인증, 회원자격 유지, 관리, 제한적 본인확인제 시행에 따른 본인확인, 서비스 부정이용 방지 등을 목적으로 개인정보를 처리합니다.&#10;&#10;나. 재화 또는 서비스 제공&#10;&#10;서비스 제공, 콘텐츠 제공, 맞춤 서비스 제공, 본인인증 등을 목적으로 개인정보를 처리합니다.&#10;&#10;다. 마케팅 및 광고에의 활용&#10;&#10;신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공 , 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.&#10;&#10;2. 개인정보 파일 현황&#10;&#10;1. 개인정보 파일명 : Palette 개인정보 처리방침&#10;개인정보 항목 : 이메일, 비밀번호, 생년월일, 이름, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보&#10;수집방법 : 홈페이지&#10;보유근거 : 회원 정보 관리 및 맞춤형 서비스 제공&#10;보유기간 : 1년&#10;관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년, 대금결제 및 재화 등의 공급에 관한 기록 : 5년, 계약 또는 청약철회 등에 관한 기록 : 5년, 표시/광고에 관한 기록 : 6개월&#10;&#10;3. 개인정보의 처리 및 보유 기간&#10;&#10;1) 익명의 하마는 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.&#10;2) 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.&#10;1.홈페이지 회원가입 및 관리&#10;홈페이지 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터 지체없이 파기 까지 위 이용목적을 위하여 보유, 이용됩니다.&#10;4. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.&#10;1) 정보주체는 익명의 하마에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.&#10;2) 제1항에 따른 권리 행사는익명의 하마에 대해 개인정보 보호법 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 익명의 하마은(는) 이에 대해 지체 없이 조치하겠습니다.&#10;3) 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.&#10;4) 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.&#10;5) 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.&#10;6) 익명의 하마은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.&#10;5. 처리하는 개인정보의 항목 작성&#10;1) 익명의 하마는 다음의 개인정보 항목을 처리하고 있습니다.&#10;1홈페이지 회원가입 및 관리&#10;필수항목 : 이메일, 비밀번호, 생년월일, 이름, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보&#10;6. 개인정보의 파기 익명의 하마는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.&#10;-파기절차&#10;이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.&#10;-파기기한&#10;이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.&#10;-파기방법&#10;전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.&#10;종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다&#10;7. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항&#10;익명의 하마 은 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키’를 사용하지 않습니다.&#10;8. 개인정보 보호책임자 작성&#10;1) 익명의 하마는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.&#10;- 개인정보 관련 접수처&#10;이메일 주소 : paletteservice20@gmail.com&#10;※ 개인정보 보호 담당부서로 연결됩니다.&#10;2) 정보주체께서는 익명의 하마의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 익명의 하마는 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.&#10;9. 개인정보 처리방침 변경&#10;1) 이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.&#10;10. 개인정보의 안전성 확보 조치 익명의 하마는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.&#10;1. 정기적인 자체 감사 실시&#10;개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.&#10;2. 개인정보 취급 직원의 최소화 및 교육&#10;개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.&#10;3. 내부관리계획의 수립 및 시행&#10;개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.&#10;4. 해킹 등에 대비한 기술적 대책&#10;익명의 하마는 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.&#10;5. 개인정보의 암호화&#10;이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.&#10;6. 접속기록의 보관 및 위변조 방지&#10;개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.&#10;7. 개인정보에 대한 접근 제한&#10; 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.&#10;8. 문서보안을 위한 잠금장치 사용&#10;개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.&#10;9. 비인가자에 대한 출입 통제&#10;개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</string>
    <string name="string_ask">문의사항</string>
    <string name="string_send">보내기</string>
    <string name="string_reset_password">비밀번호 재설정</string>
    <string name="string_ok_code">확인코드</string>
    <string name="string_quit">회원탈퇴</string>
    <string name="string_quit_text1">회원을 탈퇴하면 모든 개인정보와 데이터가 즉시 삭제되며 본인 전시회 정보 및 파일도 전부 삭제됩니다.</string>
    <string name="string_quit_text2">회원 탈퇴를 진행하기 위해서는 본인의 이메일을 작성해주세요.</string>
    <string name="string_quit_text3">탈퇴 시 모든 정보는 즉시 파기되어 복구할 수 없습니다. 정말 palette 서비스를 탈퇴하시겠습니까?</string>
    <string name="string_quit_text4">비밀번호를 입력해주세요</string>
    <string name="string_auto_login">자동 로그인</string>
    <string name="string_new_password">새로운 비밀번호</string>
    <string name="string_change_password">비밀번호 변경</string>
    <string name="string_no_password_error">비밀번호를 다시 확인해주세요</string>
    <string name="string_my_profile">내 프로필</string>
    <string name="string_edit">수정하기</string>
    <string name="string_cancel">취소</string>
</resources>