<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/ChangePassword_LinearLayout_TOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ChangePassword_ImageButton_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:contentDescription="@string/string_change_password"
            app:srcCompat="@drawable/backbuttonicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nanumeb"
            android:text="@string/string_change_password"
            android:textColor="#000000"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <TextView
        android:id="@+id/ChangePassword_TextView_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_password"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_LinearLayout_TOP"
        tools:ignore="SpUsage"
        tools:layout_editor_absoluteY="261dp" />

    <EditText
        android:id="@+id/ChangePassword_EditText_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/arial"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusDown="@id/ChangePassword_EditText_new1"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_TextView_old"
        tools:ignore="Autofill,LabelFor,SpUsage,TextFields" />

    <TextView
        android:id="@+id/ChangePassword_TextView_new1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_new_password"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_EditText_old"
        tools:ignore="SpUsage"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/ChangePassword_TextView_alert1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_alert_over_number"
        android:textColor="#E50000"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ChangePassword_EditText_new1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ChangePassword_TextView_new1"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_EditText_old"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/ChangePassword_EditText_new1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/arial"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusDown="@id/ChangePassword_EditText_new2"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_TextView_new1"
        tools:ignore="Autofill,LabelFor,SpUsage,TextFields" />

    <TextView
        android:id="@+id/ChangePassword_TextView_new2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_re_password"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_EditText_new1"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/ChangePassword_TextView_alert2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_alert_do_not_match"
        android:textColor="#E50000"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ChangePassword_EditText_new2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ChangePassword_TextView_new2"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_EditText_new1"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/ChangePassword_EditText_new2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/arial"
        android:inputType="textPassword"
        android:maxLines="1"
        android:nextFocusDown="@id/ChangePassword_Button_done"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/ChangePassword_TextView_new2"
        tools:ignore="Autofill,LabelFor,SpUsage,TextFields" />

    <TextView
        android:id="@+id/ChangePassword_TextView_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_no_password_error"
        android:textAlignment="center"
        android:textColor="#E50000"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ChangePassword_Button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/ChangePassword_Button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_button_unclick"
        android:clickable="false"
        android:fontFamily="@font/nanumr"
        android:stateListAnimator="@null"
        android:text="@string/string_ok"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>