<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".EditMyProfileActivity">

    <ImageView
        android:id="@+id/EditProfile_ImageView_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onProfileImageClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_icon" />

    <TextView
        android:id="@+id/EditProfile_TextView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_name"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditProfile_ImageView_profile"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/EditProfile_EditText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:maxLines="1"
        android:nextFocusDown="@id/EditProfile_EditText_age"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/EditProfile_TextView_name"
        tools:ignore="Autofill,LabelFor,SpUsage,TextFields" />

    <TextView
        android:id="@+id/EditProfile_TextView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumr"
        android:text="@string/string_age"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditProfile_EditText_name"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/EditProfile_EditText_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arial"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:nextFocusDown="@id/EditProfile_Button_done"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/EditProfile_TextView_age"
        tools:ignore="Autofill,LabelFor,SpUsage,TextFields" />


    <Button
        android:id="@+id/EditProfile_Button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/basic_button_darkgray"
        android:fontFamily="@font/nanumr"
        android:stateListAnimator="@null"
        android:text="@string/string_cancel"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/EditProfile_Button_done"
        tools:ignore="SpUsage" />


    <Button
        android:id="@+id/EditProfile_Button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_button_unclick"
        android:enabled="false"
        android:fontFamily="@font/nanumr"
        android:stateListAnimator="@null"
        android:text="@string/string_edit"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>